[metadata]
name = pispy-client
description = A terminal-based Python package index inspector
version = attr: pispy.__version__
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/davep/pispy
author = Dave Pearson
author_email = davep@davep.org
maintainer = Dave Pearson
maintainer_email = davep@davep.org
license = License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
license_files = LICENCE
keywords =
    terminal
    packaging
    pypi
    client
classifiers =
    License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
    Environment :: Console
    Development Status :: 4 - Beta
    Intended Audience :: End Users/Desktop
    Natural Language :: English
    Operating System :: OS Independent
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Topic :: Internet
    Topic :: Terminals
    Typing :: Typed
project_urls =
   Documentation = https://github.com/davep/pispy/blob/main/README.md
   Source = https://github.com/davep/pispy
   Issues = https://github.com/davep/pispy/issues
   Discussions = https://github.com/davep/pispy/discussions

[options]
packages = find:
platforms = any
include_package_data = True
python_requires = >=3.10,<3.13
install_requires =
    packaging
    textual>=0.56.4
    httpx

[options.entry_points]
console_scripts =
    pispy = pispy.__main__:run

### setup.cfg ends here
